--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
